--- a/index.css
+++ b/index.css
@@ -1,8 +1,4 @@
-html, body{
-  height: 100%; width: 100%;
-
-
-}
+html{ background-color: #FFFFFF;}
 
 body {
  
@@ -131,8 +127,7 @@ h1{
 p {
   font-size: 15px;
   text-align: justify;
-  text-shadow: 1px 1px#29323D;
-  color:#646464;
+
   margin-left: 60px;
   margin-right: 60px;
 }
@@ -192,7 +187,14 @@ display: inline-block;
 
 
 /*EMPIEZA SEGUNDA SECCION*/
-
+.container-section2 {
+  margin-top: 10px;
+  border: 3px solid #dcdcdc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+font-family:  'Montserrat', sans-serif;
+}
 
 
 
