--- a/index.css
+++ b/index.css
@@ -198,6 +198,10 @@ font-family:  'Montserrat', sans-serif;
 
 
 
+.container-section2 { display: flex;
+flex-direction: column;}
 
 
-
+.mi-not { 
+  font-family: 'Montserrat', sans-serif;
+}
