--- a/index.css
+++ b/index.css
@@ -132,24 +132,22 @@ display: inline-block;
   font-size: 15px;
   color: #EEEEEE;
   width: 200px;
-  height: 40px;
+  height: 50px;
   border-radius: 25px;
   background-color: #29323D;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
+
   box-shadow: 3px 3px black;
 
 }
 
 .imagen-info {
-width: 250vh;
+width: 100%;
 height: 50%;
-  border: 15px inset #B8B8B8;
+  border: 2px inset #B8B8B8;
 }
 
 
-@media (max-width: 700px){
+@media (max-width: 750px){
   ul {
       display: none;
   }
@@ -170,6 +168,8 @@ height: 50%;
     
     flex-direction: column;
   }
+
+.parrafo-1 { font-size: 20px;}
 
 
 
