--- a/index.css
+++ b/index.css
@@ -93,6 +93,15 @@ nav {
   font-size: 18px;
 }
 
+.men1 {
+  transition: 0.2s
+}
+
+.men1:hover {
+  cursor: pointer;
+  transform: scale(1.2)
+}
+
 
 
 /*EMPIEZA PRIMERA SECCIONnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn*/
@@ -115,7 +124,7 @@ font-family:  'Montserrat', sans-serif;
 }
 
 h1{
-  text-shadow: 2px 4px #05576b8a;
+  text-shadow: 9px 7px 2px rgba(0,0,0,0.42);
   font-size: 30px;
 
 }
@@ -124,6 +133,10 @@ h1{
   text-align: justify;
   margin-left: 60px;
   margin-right: 60px;
+}
+.bot-1 {
+display: flex;
+justify-content: space-evenly;
 }
 button {
 display: inline-block;
@@ -134,17 +147,32 @@ display: inline-block;
   width: 200px;
   height: 50px;
   border-radius: 25px;
-  background-color: #29323D;
+  background-color: #2F2E41;
+  -moz-box-shadow: 10px 10px 14px -7px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 14px -7px rgba(0,0,0,0.75);
+ /* box-shadow: 3px 3px black;*/
 
-  box-shadow: 3px 3px black;
+  
 
 }
 
+button {background-color: #29323D;
+  transition-duration: 0.5s;
+}
+button:hover{
+  color: #29323D;
+  background-color: #EEEEEE;
+  cursor: pointer;}
+
 .imagen-info {
+  margin: 40px;
 width: 100%;
 height: 50%;
   border: 2px inset #B8B8B8;
+  display: flex;
+
 }
+
 
 
 @media (max-width: 750px){
@@ -171,13 +199,21 @@ height: 50%;
 
 .parrafo-1 { font-size: 20px;}
 
+.bot-1 {flex-wrap: wrap;}
 
-
-
-
-
+#container-section3 {
+  flex-direction: column;
 }
 
+.icons-im {flex-direction: column;
+}
+
+#container-section4 {flex-direction: column;}
+
+.contenedor-imagenes {flex-direction: column;
+  flex-wrap: wrap;
+align-items: center;}
+}
 
 
 
@@ -186,9 +222,16 @@ height: 50%;
 
 margin-top: 10px;
   border: 3px solid #dcdcdc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
  
+  background-image:url(/imagen/components@2x.png);
+  background-repeat: no-repeat;
+  background-position-x: right;
 
 
+  
 
 
 }
@@ -197,16 +240,182 @@ margin-top: 10px;
   font-family:  'Montserrat', sans-serif;
 font-size: clamp(7px, 5vw, 20px);
 text-align: justify;
-margin-top: 100px;
-margin-bottom: 60px;
+margin-top: 200px;
+margin-bottom: 200px;
 margin-left: 60px;
 margin-right: 60px;
 
 }
 
 
+
+/*SECCION TRESSSSSSS*/
     
-   
-    
+#container-section3 {
+
+  margin-top: 10px;
+  border: 3px solid #dcdcdc;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction:column;
+align-items: center;
+
+background-image: url(/imagen/foundations@2x.png);
+background-repeat: no-repeat;
 
 
+}
+
+h3 {
+  font-size: 40px;
+  text-shadow: 5px 6px 2px rgba(0,0,0,0.12);
+
+}
+
+
+h4 { font-size: 20px;}
+
+.icons-im {
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  border: #29323D;
+}
+
+.card {
+height: 300px;
+ width: 300px;
+  margin: 50px;
+}
+
+.card-body {
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+
+.card-img-top { 
+-moz-border-radius: 16px 16px 16px 16px;
+-webkit-border-radius: 16px 16px 16px 16px;
+border: 1px solid #000000;
+
+-moz-box-shadow: 10px 10px 14px -4px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 14px -4px rgba(0,0,0,0.75);
+height: 200px;
+width: 200px;
+margin: 10px;
+
+ transition-duration: 0.3s;
+}
+
+.card-img-top:hover{
+  cursor: pointer;
+  width: 300px;
+  margin-top: 20px;
+  background-color: #E6E6E6;
+
+}
+ 
+  
+
+
+
+.card-title {
+  
+}
+
+.card-text {
+
+  text-align: center;
+  
+}
+
+/*SECCION CUATROOOO*/
+
+
+#container-section4 {
+
+  margin-top: 10px;
+  border: 3px solid #dcdcdc;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+ 
+
+
+}
+
+
+
+.contenedor-imagenes {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  
+  
+
+
+}
+
+
+.imaic {
+  width: 90px;
+  margin-top: 80px;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-bottom: 20px;
+}
+
+.imaic {
+  transition: 0.2s
+}
+
+.imaic:hover {
+  cursor: pointer;
+  transform: scale(1.2)
+}
+.imaic-1 {
+  background-color:#00FF40 ;
+  width: 90px;
+  margin-top: 80px;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-bottom: 20px;
+transition: 0.2s;
+
+}
+.imaic-1:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+
+
+@font-face {
+  font-family:Exo ;
+  src: url(/letra/Exo-Italic-VariableFont_wght.ttf);
+}
+.nuevale { 
+  font-family: Exo;
+  font-size: 45px;
+  margin: 90px;
+}
+.nuevale-1 {
+  font-family: Exo;
+  font-size: 20px;
+
+}
+.par1{
+  font-size: 25px;
+ text-align: center;
+}
+.desc1 { 
+font-size: 15px;
+text-align: center;
+margin-top: 10px;
+margin-bottom: 50px;}
